# picknik_test_stand

./: .gitignore  .rosinstall  README.md
.github/workflows/: ci.yml  upstream.rosinstall
picknik_test_stand_bringup/: CMakeLists.txt  package.xml
picknik_test_stand_bringup/config/: picknik_test_stand_bringup.rviz  picknik_test_stand_bringup_hardware.rviz  picknik_test_stand_bringup_simulation.rviz  ur5_controllers.yaml
picknik_test_stand_bringup/launch/: picknik_test_stand.launch  picknik_test_stand_moveit.launch  ur5_bringup.launch  ur_common.launch
picknik_test_stand_camera_calibration/: CMakeLists.txt  package.xml
picknik_test_stand_camera_calibration/data/: samples.yaml
picknik_test_stand_description/: CMakeLists.txt  package.xml
picknik_test_stand_description/config/: calibration_positions.srdf.xacro  camera_calibration.yaml  factory_kinematics.yaml  joint_calibration.yaml  picknik_test_stand.rviz  picknik_test_stand.srdf.xacro  picknik_test_stand.yaml  picknik_test_stand_kinematics.yaml
picknik_test_stand_description/launch/: picknik_test_stand_description.launch  view_picknik_test_stand.launch
picknik_test_stand_description/meshes/: mock_grappler_collision.stl  mock_grappler_visual.stl
picknik_test_stand_description/urdf/: _d415.urdf.xacro  _l515.urdf.xacro  bench.urdf.xacro  calibration_plate.urdf.xacro  materials.urdf.xacro  mock_grappler.urdf.xacro  picknik_test_stand.urdf.xacro  wall.urdf.xacro
picknik_test_stand_kinematic_calibration/: CMakeLists.txt  README.md  package.xml
picknik_test_stand_kinematic_calibration/bagfiles/: cal_data.bag  full_cal_data.bag  new_test.bag  test.bag
picknik_test_stand_kinematic_calibration/config/: calibrate.yaml  calibrate_camera.yaml  calibrate_checkerboard.yaml  capture_checkerboards.yaml
picknik_test_stand_kinematic_calibration/launch/: capture_checkerboard.launch  capture_checkerboards.launch  capture_feature.launch  optimize_parameters.launch
picknik_test_stand_kinematic_calibration/src/: calibration_data_visualization.cpp
picknik_test_stand_moveit_config/: CMakeLists.txt  package.xml
(+23 files in other folders)
