<?xml version="1.0"?>
<package format="2">
  <name>picknik_test_stand_description</name>
  <version>0.0.0</version>
  <description>The package constains the description of the Picknik Robotics UR5 test stand used in the office.</description>

  <maintainer email="jack.center@picknik.ai">Jack</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
